fix form wrap style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -125,7 +125,7 @@ a.underline{
 //反馈、推荐表单
 div.form-wrapper{
   padding-top: 0;
-  padding-bottom: 1.20rem;
+  padding-bottom: 1.4rem;
   .title{
     font-size: 0.16rem;
     color: #2f3033;
